{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 63,
  "lineage": "10d3cc73-a0e3-f54b-690e-6ae1b7d0adf3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/frontendIPConfigurations/web-lb-publicip-1",
                "name": "web-lb-publicip-1",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/publicIPAddresses/hr-dev-lbpublicip"
              }
            ],
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "location": "eastus",
            "name": "hr-dev-web-lb",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/backendAddressPools/web-backend",
            "loadbalancer_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "name": "web-backend"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/probes/tcp-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "name": "tcp-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_lb_rule_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/backendAddressPools/web-backend"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/frontendIPConfigurations/web-lb-publicip-1",
            "frontend_ip_configuration_name": "web-lb-publicip-1",
            "frontend_port": 80,
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/loadBalancingRules/web-app1-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb",
            "name": "web-app1-rule",
            "probe_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/probes/tcp-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_lb_probe.web_lb_probe",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic",
            "internal_domain_name_suffix": "tvbusmsxd3betlrsv14g51pqeg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet"
              }
            ],
            "location": "eastus",
            "name": "hr-dev-web-linuxvm-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "hr-dev-rg-uetjyn"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_nic_lb_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/backendAddressPools/web-backend",
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic/ipConfigurations/web-linuxvm-ip-1|/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/loadBalancers/hr-dev-web-lb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-linuxvm-ip-1",
            "network_interface_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lbpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_vmnic_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic|/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg",
            "network_interface_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkInterfaces/hr-dev-web-linuxvm-nic",
            "network_security_group_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_network_security_rule.web_vmnic_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg",
            "location": "eastus",
            "name": "hr-dev-vnet-websubnet-nsg",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vmnic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg",
            "location": "eastus",
            "name": "hr-dev-web-linuxvm-nic-nsg",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_vmnic_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-web-linuxvm-nic-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-web-linuxvm-nic-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-linuxvm-nic-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-web-linuxvm-nic-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_network_security_group.web_vmnic_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_lbpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/publicIPAddresses/hr-dev-lbpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.191.207",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "hr-dev-lbpublicip",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_linuxvm_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/publicIPAddresses/hr-dev-web-linuxvm-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.191.211",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "hr-dev-web-linuxvm-publicip",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
            "name": "hr-dev-vnet-websubnet",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
            "network_security_group_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg",
            "subnet_id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3249439d-1f57-4942-ae32-aefc6fedf026",
            "id": "/subscriptions/b4fd38ca-930c-4e35-a642-d7f7075f428e/resourceGroups/hr-dev-rg-uetjyn/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet",
            "location": "eastus",
            "name": "hr-dev-vnet",
            "resource_group_name": "hr-dev-rg-uetjyn",
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}